# pAIClient

./: .gitignore  .replit  Makefile  index.html  package.json  pnpm-lock.yaml  replit.nix  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
backend/: main.py  pyproject.toml
backend/routes/: __init__.py  config.py  env.py  error.py  frontend.py  login.py  response.py  token.py
backend/utils/: client.py  response.py
frontend/: .prettierrc  globals.d.ts  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/pages/: index.css  index.svelte  layout.css
frontend/src/pages/login/: index.svelte
frontend/src/pages/settings/: index.svelte
src/: App.svelte  main.ts  style.css
src/pages/: index.css  index.svelte  layout.css  layout.html
src/pages/login/: login.css
src/pages/settings/: index.svelte  settings.css
