[tool.poetry]
name = "paiclient"
version = "0.1.0"
description = ""
authors = ["LoryPelli"]

[tool.poetry.dependencies]
python = ">=3.8"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
openai = "^1.23.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
