[tool.poetry]
name = "paiclient"
version = "0.1.0"
description = ""
authors = ["LoryPelli"]

[tool.poetry.dependencies]
python = ">=3.8"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
requests = "^2.31.0"
openai = "^1.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
